hw01 with cycles and conditions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <p>Hello World!</p>
     
-    <script src="js/script.js"></script>
+    <script src="js/hw01.js"></script>
 </body>
 </html>
