--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+   	<title>JavaScript</title>
+   	<link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-    <p>Hello World!</p>
+    <div id="first" class="btn-block">
+      <button class="blue some"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
     
-    <script src="js/hw03.js"></script>
-</body>
+	<script src="script.js"></script>
+  </body>
 </html>
